--- a/app/globals.css
+++ b/app/globals.css
@@ -26,6 +26,22 @@ body {
     rgb(var(--background-start-rgb));
 }
 
+.expand-icon {
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  background-color: #000;
+  margin-right: 5px;
+}
+
+.expanded .expand-icon {
+  transform: rotate(45deg);
+}
+
+.collapsed .expand-icon {
+  transform: rotate(0deg);
+}
+
 .nav-link.active{
   @apply font-bold bg-slate-200 border text-gray-800 
 }
